@@ -1,15 +1,15 @@
 package com.dcstd.web.ecspserver.utils;
 
+import cn.hutool.core.io.IoUtil;
 import cn.hutool.core.io.resource.ClassPathResource;
-import cn.hutool.http.HttpRequest;
-import cn.hutool.http.HttpResponse;
-import cn.hutool.http.HttpUtil;
+import com.alibaba.fastjson.util.IOUtils;
 import com.dcstd.web.ecspserver.exception.CustomException;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
-import java.util.HashMap;
+import java.util.Objects;
 
 public class FileIOUtils {
 
@@ -20,14 +20,14 @@ public class FileIOUtils {
      */
     public static byte[] readBytesFromFile(String filename) {
         try {
-            if(filename.matches("^https://|^http://")){
-                HttpResponse response = HttpUtil.createGet(filename).execute();
-                return response.bodyBytes();
-            }
+            // 之后再写这部分
+            //if(filename.matches("^https://|^http://")){
+            //    HttpResponse response = HttpUtil.createGet(filename).execute();
+            //    return response.bodyBytes();
+            //}
             ClassPathResource resource = new ClassPathResource(filename);
-            //System.out.println("resource"+resource.getAbsolutePath());
-            File file = new File(resource.getAbsolutePath());
-            return Files.readAllBytes(file.toPath());
+            InputStream inputStream = FileIOUtils.class.getClassLoader().getResourceAsStream(filename);
+            return Objects.requireNonNull(inputStream).readAllBytes();
         } catch (IOException e) {
             throw new CustomException(500, "获取文件内容失败");
         }
